# simulation_benchmark

./: CMakeLists.txt  README.md  boxes_results.ipynb  triball.md
include/: benchmark_boxes.hh  log.hh  logging.hh
include/gz/: boxes.hh
post_processing/: boxes_post_processing.py
proto/: box_msg.proto  boxes_msg.proto
src/: CMakeLists.txt  TestMacro.cmake  boxes_dt_TEST.cc  boxes_model_count_TEST.cc  log.cc
src/gz/: CMakeLists.txt  boxes.cc
test_results/: BENCHMARK_boxes_dt_TEST.csv  BENCHMARK_boxes_model_count_TEST.csv
tools/boxes/: mcap_to_csv.py  plot_helpers.py
worlds/boxes/: boxes.world  boxes.world.erb
