cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
project(simulation_benchmark)
enable_testing()
find_package(gz-sim9 REQUIRED)
add_subdirectory(gtest_vendor)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(Boxes_dt src/boxes_dt_TEST.cc src/gz/boxes.cc)
target_include_directories(Boxes_dt PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(Boxes_dt gz-sim9 sdformat15 gz-math8 gtest gtest_main)